example/http-echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: http-echo
  name: http-echo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
      - image: docker.io/edgeflare/http-echo
        name: http-echo
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-echo
  name: http-echo
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: http-echo
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-with-opa-authz
  namespace: default
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - match: Host(`example.com`) # replace with your domain
    kind: Rule
    services:
    - name: http-echo
      port: 80
    middlewares:
    - name: opa-authz
  tls:
    secretName: example.com-tls # replace with your tls secret
---
